--- a/variabel.html
+++ b/variabel.html
@@ -26,8 +26,9 @@
  var bukan =(!nilai_dony) // ketiadaan nilai
  console.log(bukan)
 
+// ctrl C untuk mematikan atau menstop proses di github bash
 
-
+//coba aja perubahan di source code
 
 
 
